# queued

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape  docker-compose.demo.yml  setup-demo.sh
scripts/: run-integration-tests.sh
src/queued/: __init__.py  __main__.py  app.py  config.py  models.py  sftp.py  transfer.py
src/queued/widgets/: __init__.py  file_browser.py  status_bar.py  transfer_list.py
tests/: __init__.py  conftest.py  test_app_integration.py  test_config.py  test_file_browser.py  test_models.py  test_sftp.py  test_sftp_integration.py  test_transfer.py  test_transfer_list.py
tests/docker/: docker-compose.yml
tests/docker/test-files/: testfile.txt
tests/mocks/: sftp_mock.py
