[project]
name = "queued"
version = "0.1.0"
description = "TUI SFTP download manager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jack" }]
keywords = ["sftp", "tui", "download", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.89.0",
    "asyncssh>=2.17.0",
    "aiofiles>=24.1.0",
    "click>=8.1.0",
]

[project.scripts]
queued = "queued.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/jkingston/queued"
Repository = "https://github.com/jkingston/queued"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queued"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "SIM102",  # Use single if - sometimes nested is clearer
    "SIM105",  # Use contextlib.suppress - try/except is clearer
    "SIM108",  # Use ternary - if/else is clearer for multi-line
    "SIM117",  # Nested with - clearer for tests with temp dirs
    "UP045",   # Optional[X] -> X | None - keep for compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP035"]  # Allow typing imports for test clarity

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests requiring Docker (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
]
